# uvc-rs

./: Cargo.toml  README.md  plan.md
.github/workflows/: android.yml
.kilo/plans/: rust-uvc-engine.md
android-app/: gradle.properties
android-app/app/: CMakeLists.txt  build.gradle
crates/uvc-cli/: Cargo.toml
crates/uvc-cli/src/: main.rs
crates/uvc-core/: Cargo.toml
crates/uvc-core/src/: camera.rs  error.rs  format.rs  frame.rs  lib.rs  pipeline.rs
crates/uvc-driver/: Cargo.toml
crates/uvc-driver/src/: decode.rs  fake.rs  iso.rs  lib.rs  packet.rs
crates/uvc-jni/: Cargo.toml
crates/uvc-jni/src/: android.rs  lib.rs
